feat: rename announcement to post
