# backend/internal/app/router.go
@@ -34,10 +34,10 @@ func (a *App) registerRoutes() {
 	userKeySkillHandler := handler.NewUserKeySkillHandler(service.NewUserKeySkillService(repo), a.Logger)
 	userSoftSkillHandler := handler.NewUserSoftSkillHandler(service.NewUserSoftSkillService(repo), a.Logger)
 	referenceHandler := handler.NewReferenceHandler(service.NewReferenceService(repo), a.Logger)
-	announcementHandler := handler.NewAnnouncementHandler(service.NewAnnouncementService(repo), a.Storage, a.Logger)
+	postHandler := handler.NewPostHandler(service.NewPostService(repo), a.Storage, a.Logger)
 	newsHandler := handler.NewNewsHandler(service.NewNewsService(repo), a.Storage, a.Logger)
 	eventHandler := handler.NewEventHandler(service.NewEventService(repo), a.Storage, a.Logger)
-	announcementResponseHandler := handler.NewAnnouncementResponseHandler(service.NewAnnouncementResponseService(repo), a.Storage, a.Logger)
+	postResponseHandler := handler.NewPostResponseHandler(service.NewPostResponseService(repo), a.Storage, a.Logger)
 	eventResponseHandler := handler.NewEventResponseHandler(service.NewEventResponseService(repo), a.Storage, a.Logger)
 	savedUserHandler := handler.NewSavedUserHandler(service.NewSavedUserService(repo), a.Storage, a.Logger)
 
@@ -86,10 +86,10 @@ func (a *App) registerRoutes() {
 	me.Put("/contacts/:contactId", contactHandler.UpdateContact)
 	me.Delete("/contacts/:contactId", contactHandler.DeleteContact)
 
-	me.Get("/announcements", announcementHandler.GetMyAnnouncements)
+	me.Get("/posts", postHandler.GetMyPosts)
 	me.Get("/news", newsHandler.GetMyNews)
 	me.Get("/events", eventHandler.GetMyEvents)
-	me.Get("/announcement-responses", announcementResponseHandler.GetMyResponses)
+	me.Get("/post-responses", postResponseHandler.GetMyResponses)
 	me.Get("/event-responses", eventResponseHandler.GetMyResponses)
 
 	me.Get("/key-skills", userKeySkillHandler.GetMyKeySkills)
@@ -104,15 +104,15 @@ func (a *App) registerRoutes() {
 	me.Post("/saved-users/:userId", savedUserHandler.AddMySavedUser)
 	me.Delete("/saved-users/:userId", savedUserHandler.DeleteMySavedUser)
 
-	announcements := api.Group("/announcements")
-	announcements.Get("/", announcementHandler.GetAnnouncements)
-	announcements.Post("/", announcementHandler.CreateAnnouncement)
-	announcements.Get("/:id", announcementHandler.GetAnnouncementByID)
-	announcements.Put("/:id", announcementHandler.UpdateAnnouncement)
-	announcements.Delete("/:id", announcementHandler.DeleteAnnouncement)
-	announcements.Get("/:id/responses", announcementResponseHandler.GetResponders)
-	announcements.Post("/:id/responses", announcementResponseHandler.RespondToAnnouncement)
-	announcements.Delete("/:id/responses", announcementResponseHandler.DeleteMyResponse)
+	posts := api.Group("/posts")
+	posts.Get("/", postHandler.GetPosts)
+	posts.Post("/", postHandler.CreatePost)
+	posts.Get("/:id", postHandler.GetPostByID)
+	posts.Put("/:id", postHandler.UpdatePost)
+	posts.Delete("/:id", postHandler.DeletePost)
+	posts.Get("/:id/responses", postResponseHandler.GetResponders)
+	posts.Post("/:id/responses", postResponseHandler.RespondToPost)
+	posts.Delete("/:id/responses", postResponseHandler.DeleteMyResponse)
 
 	news := api.Group("/news")
 	news.Get("/", newsHandler.GetNews)
